k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            #need long term storage that matches whats 
            # defined in PVC with this name
            # this allocates that storage
            # still need to assign it for use by containers
            claimName: database-persistent-volume-claim
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          #name has to be same as name of volume above
          # mountPath is where in container this storage should be made available
          # anything stored in mountPath will be stored in PersistentVolume(think Docker volumes)
          # mountPath we use is default where pg stores data
          # subPath required by postgres specifically. directory in the PV where data is stored
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
      #will add env variables later
