k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations: 
    # create ingress controller based on nginx project
    kubernetes.io/ingress.class: nginx
    # removes api from /api request path so dont need api in all server urls
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
    #set up two paths to either route to client or service cluster ip service
    # based on beginning of path using service names
        paths:
          - path: /?(.*)
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
